# mem_eff_registformer

./: .gitignore  README.md  danny_train.py  pyproject.toml  test.py  train.py
nbs/: Untitled1.ipynb  padain_synthesis_tutorial.ipynb
scripts/pipeline/: padain_synthesis_pipeline.py
scripts/unit_test/: ct_denorm_test.py  ct_min_max.py  monai_2d_slices_from_3d_nii.py  monai_dataset_test.py  mr_min_max.py  test_loading_speed_comparison.py  test_loading_speed_simple.py  test_nii_complete.py  test_nii_dataset.py  test_nii_dataset_full.py  test_nii_dataset_simple.py  test_nii_gridpatch_dataset.py  test_train_integration.py  test_unified_dataset.py  test_unified_dataset_simple.py
src/common/: __init__.py  base_metrics.py  base_pipeline.py  dataset.py  losses.py  metrics.py
src/common/callbacks/: __init__.py  logging_callbacks.py  metric_callbacks.py  save_callbacks.py
src/common/configs/: __init__.py  base_data_config.py  base_training_args.py
src/common/datasets/: __init__.py  base_dataset.py  h5_dataset.py  nii_dataset.py
src/models/: __init__.py  padain_synthesis_module.py
src/models/components/: __init__.py  discriminator.py  patch_sample_f.py
src/padain_synthesis/: __init__.py  config.py  dataset.py  metrics.py  modeling_padain_synthesis.py  padain_synthesis.py  pipeline.py  trainer.py
src/padain_synthesis/callbacks/: logging_callbacks.py  metric_callbacks.py  save_callbacks.py
